--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LinkPost Settings</title>
   <link rel="stylesheet" href="popup.css">
 </head>
+
 <body>
   <div class="container">
     <h1>LinkPost</h1>
@@ -16,7 +18,15 @@
         <span class="slider"></span>
       </label>
     </div>
+    <div class="setting-row">
+      <label for="hidePremiumAds">Masquer pub Premium</label>
+      <label class="toggle">
+        <input type="checkbox" id="hidePremiumAds">
+        <span class="slider"></span>
+      </label>
+    </div>
   </div>
   <script src="popup.js"></script>
 </body>
+
 </html>
