--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,13 @@
       </label>
     </div>
     <div class="setting-row">
+      <label for="pinShareBox">Création de posts</label>
+      <label class="toggle">
+        <input type="checkbox" id="pinShareBox">
+        <span class="slider"></span>
+      </label>
+    </div>
+    <div class="setting-row">
       <label for="hidePremiumAds">Masquer pub Premium</label>
       <label class="toggle">
         <input type="checkbox" id="hidePremiumAds">
