add new setting to hide games

--- a/popup.html
+++ b/popup.html
@@ -32,6 +32,13 @@
         <span class="slider"></span>
       </label>
     </div>
+    <div class="setting-row">
+      <label for="hideGames">Masquer les jeux</label>
+      <label class="toggle">
+        <input type="checkbox" id="hideGames">
+        <span class="slider"></span>
+      </label>
+    </div>
   </div>
   <script src="popup.js"></script>
 </body>
